src/objects/copado__Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Build_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build Task</label>
        <referenceTo>copado__Build_Task__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Completed__c</fullName>
        <formula>IF(copado__Deployment_Jobs_Count__c&gt;0,
copado__Count_Completed__c /  copado__Deployment_Jobs_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Status__c</fullName>
        <label>Compliance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Count_Completed__c</fullName>
        <label># Completed</label>
        <summarizedField>copado__Step__c.copado__Count_Completed__c</summarizedField>
        <summaryForeignKey>copado__Step__c.copado__Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Date__c</fullName>
        <inlineHelpText>When this need to be deployed</inlineHelpText>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Deployed__c</fullName>
        <formula>IF(copado__Deployment_Jobs_Count__c &gt; 0,
copado__SUM_Deployed__c / copado__Deployment_Jobs_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Completed_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated when the Deployment Completed email has been sent to prevent subsequent notifications until this marker has been reset.</description>
        <label>Deployment Completed email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Jobs_Count__c</fullName>
        <label>Deployment Jobs Count</label>
        <summarizedField>copado__Step__c.copado__Org_Count__c</summarizedField>
        <summaryForeignKey>copado__Step__c.copado__Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Last_Step__c</fullName>
        <label>Deployment Last Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Source_Type__c</fullName>
        <label>Deployment Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_command_sent__c</fullName>
        <label>Deployment command sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Flag_Status__c</fullName>
        <formula>CASE( copado__Status__c, &quot;Completed Successfully&quot;, &quot;/resource/&quot; + IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
 + &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-check.png&quot;, 
&quot;In progress&quot;, &quot;/img/loading.gif&quot;, 
&quot;Completed with Errors&quot;, &quot;/resource/&quot; +  IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
 + &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-cross.png&quot;, 
&quot;/resource/&quot; +  IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
 + &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-paused.png&quot;)</formula>
        <label>Flag Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__From_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Org</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__Org__c.CreatedById</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Deployments (From Org)</relationshipLabel>
        <relationshipName>Deployments_From_Org</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Last_Compliance_Scan_Date__c</fullName>
        <label>Last Compliance Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Paused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to decide if there is a pending manual item on deployment.</description>
        <inlineHelpText>This field is auto populated when a manual task is pending on deployment.</inlineHelpText>
        <label>Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__SUM_Deployed__c</fullName>
        <label>SUM Deployed</label>
        <summarizedField>copado__Step__c.copado__SUM_Deployed__c</summarizedField>
        <summaryForeignKey>copado__Step__c.copado__Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Schedule__c</fullName>
        <label>Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deploy now</fullName>
                </value>
                <value>
                    <fullName>Deploy later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Send_Deployment_Complete_email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When the deployment completes an email will be sent to the owner of the deployment informing them of the status. Uncheck this checkbox to not receive such an email.</inlineHelpText>
        <label>Send Deployment Complete email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Server_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_260</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Server_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Source_Environment__c</fullName>
        <formula>copado__From_Org__r.copado__Environment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Environment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed with Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Deployed__c</columns>
        <columns>copado__Completed__c</columns>
        <columns>copado__From_Org__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>